fix: main jupyter runner and requirements file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -11,40 +11,9 @@
     },
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting package metadata (current_repodata.json): done\r\n",
-      "Solving environment: unsuccessful initial attempt using frozen solve. Retrying with flexible solve.\r\n",
-      "Collecting package metadata (repodata.json): done\r\n",
-      "Solving environment: unsuccessful initial attempt using frozen solve. Retrying with flexible solve.\r\n",
-      "\r\n",
-      "PackagesNotFoundError: The following packages are not available from current channels:\r\n",
-      "\r\n",
-      "  - python==3.6\r\n",
-      "\r\n",
-      "Current channels:\r\n",
-      "\r\n",
-      "  - https://repo.anaconda.com/pkgs/main/linux-aarch64\r\n",
-      "  - https://repo.anaconda.com/pkgs/main/noarch\r\n",
-      "  - https://repo.anaconda.com/pkgs/r/linux-aarch64\r\n",
-      "  - https://repo.anaconda.com/pkgs/r/noarch\r\n",
-      "\r\n",
-      "To search for alternate channels that may provide the conda package you're\r\n",
-      "looking for, navigate to\r\n",
-      "\r\n",
-      "    https://anaconda.org\r\n",
-      "\r\n",
-      "and use the search bar at the top of the page.\r\n",
-      "\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!conda install python == 3.6"
+    "!git clone https://github.com/developer-sidani/CharBERT.git"
    ]
   },
   {
@@ -56,7 +25,9 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/developer-sidani/CharBERT.git"
+    "!pip install -q condacolab\n",
+    "import condacolab\n",
+    "condacolab.install()"
    ]
   },
   {
@@ -65,7 +36,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install --file requirements.txt"
+    "!conda env create --name charbert -f CharBERT/requirements.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cd CharBERT\n",
+    "\n",
+    "PYTHON_PATH=/usr/local/envs/charbert/bin/python\n",
+    "$PYTHON_PATH --version"
    ]
   }
  ],
