update in the main runner

--- a/main_runner.ipynb
+++ b/main_runner.ipynb
@@ -101,8 +101,11 @@
     "    --model_name_or_path bert-base-cased \\\n",
     "    --do_train \\\n",
     "    --do_eval \\\n",
-    "    --train_data_file \"/content/data/train.txt\" \\\n",
-    "    --eval_data_file  \"/content/data/eval.txt\" \\\n",
+    "    --wandb_key $wandb_key \\\n",
+    "    --wandb_project CharBERT \\\n",
+    "    --wandb_run_name \"bert_base_cased_wiki_eng\" \\\n",
+    "    --train_data_file \"/content/drive/MyDrive/NLP/data/train.txt\" \\\n",
+    "    --eval_data_file  \"/content/drive/MyDrive/NLP/dataa/eval.txt\" \\\n",
     "    --term_vocab \"/content/CharBERT/data/dict/term_vocab\" \\\n",
     "    --learning_rate 3e-5 \\\n",
     "    --num_train_epochs 3 \\\n",
@@ -115,7 +118,7 @@
     "    --block_size 384 \\\n",
     "    --mlm \\\n",
     "    --overwrite_output_dir \\\n",
-    "    --output_dir  \"/content/output/bert_base_cased_wiki_eng\""
+    "    --output_dir  \"/content/drive/output/bert_base_cased_wiki_eng\""
    ]
   }
  ],
