fix: update runner

--- a/main_runner.ipynb
+++ b/main_runner.ipynb
@@ -56,38 +56,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "# from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"wikipedia\", \"20220301.simple\")\n",
+    "# dataset = load_dataset(\"wikipedia\", \"20220301.simple\")\n",
     "\n",
-    "train_text = dataset['train'][:500]['text']\n",
-    "eval_text = dataset['train'][500:650]['text']\n",
-    "test_text = dataset['train'][650:800]['text']\n",
-    "\n",
-    "\n",
-    "!mkdir data\n",
-    "# Note that if you work on Colab you may need to create the folder \"data\" ---> change the directories based on your development tool of choice\n",
-    "text = ''\n",
-    "for el in train_text:\n",
-    "  text += el\n",
-    "with open(\"/content/data/train.txt\", 'w', encoding='utf-8') as f:\n",
-    "  f.write(text)\n",
+    "# train_text = dataset['train'][:500]['text']\n",
+    "# eval_text = dataset['train'][500:650]['text']\n",
+    "# test_text = dataset['train'][650:800]['text']\n",
     "\n",
     "\n",
-    "text = ''\n",
-    "for el in eval_text:\n",
-    "  text += el\n",
-    "with open(\"/content/data/eval.txt\", 'w', encoding='utf-8') as f:\n",
-    "  f.write(text)\n",
+    "# !mkdir data\n",
+    "# # Note that if you work on Colab you may need to create the folder \"data\" ---> change the directories based on your development tool of choice\n",
+    "# text = ''\n",
+    "# for el in train_text:\n",
+    "#   text += el\n",
+    "# with open(\"/content/data/train.txt\", 'w', encoding='utf-8') as f:\n",
+    "#   f.write(text)\n",
+    "\n",
+    "\n",
+    "# text = ''\n",
+    "# for el in eval_text:\n",
+    "#   text += el\n",
+    "# with open(\"/content/data/eval.txt\", 'w', encoding='utf-8') as f:\n",
+    "#   f.write(text)\n",
     "     \n",
     "\n",
     "\n",
     "\n",
-    "text = ''\n",
-    "for el in test_text:\n",
-    "  text += el\n",
-    "with open(\"/content/data/test.txt\", 'w', encoding='utf-8') as f:\n",
-    "  f.write(text)"
+    "# text = ''\n",
+    "# for el in test_text:\n",
+    "#   text += el\n",
+    "# with open(\"/content/data/test.txt\", 'w', encoding='utf-8') as f:\n",
+    "#   f.write(text)"
    ]
   },
   {
@@ -104,8 +104,8 @@
     "    --wandb_key $wandb_key \\\n",
     "    --wandb_project CharBERT \\\n",
     "    --wandb_run_name \"bert_base_cased_wiki_eng\" \\\n",
-    "    --train_data_file \"/content/drive/MyDrive/NLP/data/train.txt\" \\\n",
-    "    --eval_data_file  \"/content/drive/MyDrive/NLP/dataa/eval.txt\" \\\n",
+    "    --train_data_file \"/content/drive/MyDrive/NLP/data/wiki-eng/train.txt\" \\\n",
+    "    --eval_data_file  \"/content/drive/MyDrive/NLP/data/wiki-eng/eval.txt\" \\\n",
     "    --term_vocab \"/content/CharBERT/data/dict/term_vocab\" \\\n",
     "    --learning_rate 3e-5 \\\n",
     "    --num_train_epochs 3 \\\n",
@@ -118,7 +118,17 @@
     "    --block_size 384 \\\n",
     "    --mlm \\\n",
     "    --overwrite_output_dir \\\n",
-    "    --output_dir  \"/content/drive/output/bert_base_cased_wiki_eng\""
+    "    --output_dir  \"/content/drive/outputwiki-eng//bert_base_cased_wiki_eng\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import runtime\n",
+    "runtime.unassign()"
    ]
   }
  ],
