--- a/main_runner.ipynb
+++ b/main_runner.ipynb
@@ -118,7 +118,39 @@
     "    --block_size 384 \\\n",
     "    --mlm \\\n",
     "    --overwrite_output_dir \\\n",
-    "    --output_dir  \"/content/drive/outputwiki-eng//bert_base_cased_wiki_eng\""
+    "    --output_dir  \"/content/drive/MyDrive/NLP/output/wiki-eng/bert_base_cased_wiki_eng\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR='/content/drive/MyDrive/NLP/data/CoNLL2003'\n",
+    "MODEL_DIR='/content/drive/MyDrive/NLP/output/wiki-eng/bert_base_cased_wiki_eng'\n",
+    "OUTPUT_DIR=='/content/drive/MyDrive/NLP/output/conll2003_ner'\n",
+    "!python3 run_ner.py --data_dir ${DATA_DIR} \\\n",
+    "                --model_type bert \\\n",
+    "                --wandb_key $wandb_key \\\n",
+    "                --wandb_project CharBERT \\\n",
+    "                --wandb_run_name \"ner_conll2003\" \\\n",
+    "                --model_name_or_path $MODEL_DIR \\\n",
+    "                --output_dir ${OUTPUT_DIR} \\\n",
+    "                --num_train_epochs 3 \\\n",
+    "                --learning_rate 3e-5 \\\n",
+    "                --char_vocab /content/CharBERT/data/dict/bert_char_vocab \\\n",
+    "                --per_gpu_train_batch_size 6 \\\n",
+    "                --do_train \\\n",
+    "                --do_predict \\\n",
+    "                --overwrite_output_dir"
    ]
   },
   {
