feat: multilingual extension

--- a/main_runner.ipynb
+++ b/main_runner.ipynb
@@ -46,48 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!mkdir data\n",
-    "!mkdir output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from datasets import load_dataset\n",
-    "\n",
-    "# dataset = load_dataset(\"wikipedia\", \"20220301.simple\")\n",
-    "\n",
-    "# train_text = dataset['train'][:500]['text']\n",
-    "# eval_text = dataset['train'][500:650]['text']\n",
-    "# test_text = dataset['train'][650:800]['text']\n",
-    "\n",
-    "\n",
-    "# !mkdir data\n",
-    "# # Note that if you work on Colab you may need to create the folder \"data\" ---> change the directories based on your development tool of choice\n",
-    "# text = ''\n",
-    "# for el in train_text:\n",
-    "#   text += el\n",
-    "# with open(\"/content/data/train.txt\", 'w', encoding='utf-8') as f:\n",
-    "#   f.write(text)\n",
-    "\n",
-    "\n",
-    "# text = ''\n",
-    "# for el in eval_text:\n",
-    "#   text += el\n",
-    "# with open(\"/content/data/eval.txt\", 'w', encoding='utf-8') as f:\n",
-    "#   f.write(text)\n",
-    "     \n",
-    "\n",
-    "\n",
-    "\n",
-    "# text = ''\n",
-    "# for el in test_text:\n",
-    "#   text += el\n",
-    "# with open(\"/content/data/test.txt\", 'w', encoding='utf-8') as f:\n",
-    "#   f.write(text)"
+    "### Baseline Bert"
    ]
   },
   {
@@ -136,7 +95,7 @@
    "source": [
     "DATA_DIR='/content/drive/MyDrive/NLP/data/CoNLL2003'\n",
     "MODEL_DIR='/content/drive/MyDrive/NLP/output/wiki-eng/bert_base_cased_wiki_eng'\n",
-    "OUTPUT_DIR=='/content/drive/MyDrive/NLP/output/conll2003_ner'\n",
+    "OUTPUT_DIR='/content/drive/MyDrive/NLP/output/conll2003_ner'\n",
     "!python3 run_ner.py --data_dir ${DATA_DIR} \\\n",
     "                --model_type bert \\\n",
     "                --wandb_key $wandb_key \\\n",
@@ -151,6 +110,104 @@
     "                --do_train \\\n",
     "                --do_predict \\\n",
     "                --overwrite_output_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multilingual Extension Bert cased"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 ./CharBERT/run_lm_finetuning.py \\\n",
+    "    --model_type bert \\\n",
+    "    --model_name_or_path bert-base-multilingual-cased \\\n",
+    "    --do_train \\\n",
+    "    --do_eval \\\n",
+    "    --train_data_file \"/content/drive/MyDrive/NLP/data/wiki/wikil_eng_wiki_ita_train.txt\" \\\n",
+    "    --eval_data_file  \"/content/drive/MyDrive/NLP/data/wiki/wikil_eng_wiki_ita_val.txt\" \\\n",
+    "    --term_vocab \"./CharBERT/data/dict/term_vocab\" \\\n",
+    "    --learning_rate 3e-5 \\\n",
+    "    --num_train_epochs 3 \\\n",
+    "    --char_vocab \"/content/CharBERT/data/dict/bert_char_vocab\" \\\n",
+    "    --mlm_probability 0.10 \\\n",
+    "    --wandb_key $wandb_key \\\n",
+    "    --wandb_project CharBERT \\\n",
+    "    --input_nraws 1000 \\\n",
+    "    --per_gpu_train_batch_size 4 \\\n",
+    "    --per_gpu_eval_batch_size 4 \\\n",
+    "    --save_steps 10000 \\\n",
+    "    --block_size 384 \\\n",
+    "    --mlm \\\n",
+    "    --overwrite_output_dir \\\n",
+    "    --output_dir  \"/content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita\" \\\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ner Multilingual CoNLL2003 ENGLISH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 ./CharBERT/run_ner.py \\\n",
+    "                    --data_dir \"/content/drive/MyDrive/NLP/data/CoNLL2003\" \\\n",
+    "                    --model_type bert \\\n",
+    "                    --model_name_or_path \"/content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita\" \\\n",
+    "                    --output_dir  \"/content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003\" \\\n",
+    "                    --num_train_epochs 3 \\\n",
+    "                    --wandb_key $wandb_key \\\n",
+    "                    --wandb_project CharBERT \\\n",
+    "                    --learning_rate 3e-5 \\\n",
+    "                    --char_vocab \"/content/CharBERT/data/dict/bert_char_vocab\" \\\n",
+    "                    --per_gpu_train_batch_size 6 \\\n",
+    "                    --do_train \\\n",
+    "                    --do_predict \\\n",
+    "                    --overwrite_output_dir \\\n",
+    "                    --save_steps 10000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ner Multilingual CoNLL2003 Italian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python ./CharBERT/run_ner.py \\\n",
+    "                    --data_dir \"/content/drive/MyDrive/NLP/data/CoNLL2003_ita\" \\\n",
+    "                    --model_type bert \\\n",
+    "                    --model_name_or_path \"/content/drive/MyDrive/NLP/output/multilingual//MLM_cased/wikil_eng_wiki_ita\" \\\n",
+    "                    --output_dir  \"/content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003_ita\" \\\n",
+    "                    --num_train_epochs 3 \\\n",
+    "                    --wandb_key $wandb_key \\\n",
+    "                    --wandb_project CharBERT \\\n",
+    "                    --learning_rate 3e-5 \\\n",
+    "                    --char_vocab \"/content/CharBERT/data/dict/bert_char_vocab\" \\\n",
+    "                    --per_gpu_train_batch_size 6 \\\n",
+    "                    --do_train \\\n",
+    "                    --do_predict \\\n",
+    "                    --overwrite_output_dir \\\n",
+    "                    --save_steps 10000"
    ]
   },
   {
