--- a/main_runner.ipynb
+++ b/main_runner.ipynb
@@ -275,8 +275,8 @@
     "    --model_name_or_path bert-base-cased \\\n",
     "    --do_train \\\n",
     "    --do_eval \\\n",
-    "    --train_data_file /content/drive/MyDrive/NLP/data/wiki-eng/train.txt \\\n",
-    "    --eval_data_file  /content/drive/MyDrive/NLP/data/wiki/wiki_eng_eval.txt \\\n",
+    "    --train_data_file /content/drive/MyDrive/NLP/data/wiki/wiki_eng_train.txt \\\n",
+    "    --eval_data_file  /content/drive/MyDrive/NLP/data/wiki/wiki_eng_val.txt \\\n",
     "    --term_vocab /content/CharBERT/data/dict/term_vocab \\\n",
     "    --learning_rate 3e-5 \\\n",
     "    --num_train_epochs 3 \\\n",
@@ -339,13 +339,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#todo: @fabio remove the --do_train flag from the following command to only evaluate\n",
     "!python3 /content/CharBERT/run_lm_finetuning.py \\\n",
     "    --model_type roberta \\\n",
     "    --model_name_or_path roberta-base \\\n",
-    "    --do_train \\\n",
+    "    --do_train \\ \n",
     "    --do_eval \\\n",
-    "    --train_data_file /content/drive/MyDrive/NLP/data/wiki-eng/train.txt \\\n",
-    "    --eval_data_file  /content/drive/MyDrive/NLP/data/wiki-eng/eval.txt \\\n",
+    "    --train_data_file /content/drive/MyDrive/NLP/data/wiki/wiki_eng_train.txt \\\n",
+    "    --eval_data_file  /content/drive/MyDrive/NLP/data/wiki/wiki_eng_val.txt \\\n",
     "    --term_vocab /content/CharBERT/data/dict/term_vocab \\\n",
     "    --learning_rate 3e-5 \\\n",
     "    --num_train_epochs 3 \\\n",
@@ -378,7 +379,7 @@
     "!python3 /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/CoNLL2003 \\\n",
     "                --model_type roberta \\\n",
     "                --model_name_or_path /content/drive/MyDrive/NLP/output/wiki-eng/robert_base_wiki_eng \\\n",
-    "                --output_dir /content/drive/MyDrive/NLP/output/conll2003_ner \\\n",
+    "                --output_dir /content/drive/MyDrive/NLP/output/conll2003_ner_roberta \\\n",
     "                --num_train_epochs 3 \\\n",
     "                --learning_rate 3e-5 \\\n",
     "                --char_vocab /content/CharBERT/data/dict/roberta_char_vocab \\\n",
@@ -455,7 +456,7 @@
     "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/CoNLL2003/ \\\n",
     "                            --model_type bert \\\n",
     "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_bert_base/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003 \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003/bert_ag_conll \\\n",
     "                            --num_train_epochs 3 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERT/data/dict/bert_char_vocab \\\n",
@@ -479,11 +480,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/legal_domain_ner/ \\\n",
+    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/news_domain_ner/ \\\n",
     "                            --model_type bert \\\n",
-    "                            --labels /content/drive/MyDrive/NLP/data/legal_domain_ner/labels.txt \\\n",
+    "                            --labels /content/drive/MyDrive/NLP/data/news_domain_ner/labels.txt \\\n",
     "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_bert_base/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/legal_domain_ner \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003/bert_ag_wnut \\\n",
     "                            --num_train_epochs 1 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERT/data/dict/bert_char_vocab \\\n",
@@ -592,11 +593,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/legal_domain_ner/ \\\n",
+    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/news_domain_ner/ \\\n",
     "                            --model_type bert \\\n",
-    "                            --labels /content/drive/MyDrive/NLP/data/legal_domain_ner/labels.txt \\\n",
+    "                            --labels /content/drive/MyDrive/NLP/data/news_domain_ner/labels.txt \\\n",
     "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/bert-base-cased-ag-news/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/legal_domain_ner_bert-base-cased-ag-news \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/news_domain_ner_bert-base-cased-ag-news \\\n",
     "                            --num_train_epochs 1 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERT/data/dict/bert_char_vocab \\\n",
@@ -630,9 +631,9 @@
     "!python /content/CharBERT/run_lm_finetuning.py \\\n",
     "    --model_type roberta \\\n",
     "    --model_name_or_path roberta-base \\\n",
-    "    --output_dir /content/drive/MyDrive/NLP/output/news/mlm_roberta_base/ \\\n",
+    "    --output_dir /content/drive/MyDrive/NLP/output/news/mlm_roberta_base_ag/ \\\n",
     "    --train_data_file /content/drive/MyDrive/NLP/data/news_domain/train.txt \\\n",
-    "    --eval_data_file  /content/drive/MyDrive/NLP/data/news_domain/val.txt \\\n",
+    "    --eval_data_file /content/drive/MyDrive/NLP/data/news_domain/val.txt \\\n",
     "    --do_train \\\n",
     "    --do_eval \\\n",
     "    --term_vocab /content/CharBERT/data/dict/term_vocab \\\n",
@@ -664,8 +665,8 @@
    "source": [
     "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/CoNLL2003/ \\\n",
     "                            --model_type roberta \\\n",
-    "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_roberta_base/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003 \\\n",
+    "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_roberta_base_ag/ \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003/roberta_ag_conll \\\n",
     "                            --num_train_epochs 3 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERT/data/dict/roberta_char_vocab \\\n",
@@ -689,11 +690,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/legal_domain_ner/ \\\n",
+    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/news_domain_ner/ \\\n",
     "                            --model_type roberta \\\n",
-    "                            --labels /content/drive/MyDrive/NLP/data/legal_domain_ner/labels.txt \\\n",
-    "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_roberta_base/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/legal_domain_ner \\\n",
+    "                            --labels /content/drive/MyDrive/NLP/data/news_domain_ner/labels.txt \\\n",
+    "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/mlm_roberta_base_ag/ \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/conll2003/roberta_ag_wnut \\\n",
     "                            --num_train_epochs 1 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERT/data/dict/roberta_char_vocab \\\n",
@@ -802,11 +803,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/legal_domain_ner/ \\\n",
+    "!python /content/CharBERT/run_ner.py --data_dir /content/drive/MyDrive/NLP/data/news_domain_ner/ \\\n",
     "                            --model_type roberta \\\n",
-    "                            --labels /content/drive/MyDrive/NLP/data/legal_domain_ner/labels.txt \\\n",
+    "                            --labels /content/drive/MyDrive/NLP/data/news_domain_ner/labels.txt \\\n",
     "                            --model_name_or_path /content/drive/MyDrive/NLP/output/news/roberta-base-ag-news/ \\\n",
-    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/legal_domain_ner_roberta-base-ag-news \\\n",
+    "                            --output_dir /content/drive/MyDrive/NLP/output/news/NER_cased/news_domain_ner_roberta-base-ag-news \\\n",
     "                            --num_train_epochs 1 \\\n",
     "                            --learning_rate 3e-5 \\\n",
     "                            --char_vocab /content/CharBERTdata/dict/roberta_char_vocab \\\n",
@@ -933,6 +934,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Clone the xlm-roberta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://huggingface.co/FacebookAI/xlm-roberta-base"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Finetune on multilingual Dataset"
    ]
   },
@@ -944,7 +961,7 @@
    "source": [
     "!python3 /content/CharBERT/run_lm_finetuning.py \\\n",
     "    --model_type roberta \\\n",
-    "    --model_name_or_path bert-base-multilingual-cased \\\n",
+    "    --model_name_or_path /content/xlm-roberta-base/ \\\n",
     "    --do_train \\\n",
     "    --do_eval \\\n",
     "    --train_data_file /content/drive/MyDrive/NLP/data/wiki/wikil_eng_wiki_ita_train.txt \\\n",
@@ -961,7 +978,7 @@
     "    --block_size 384 \\\n",
     "    --mlm \\\n",
     "    --overwrite_output_dir \\\n",
-    "    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita     "
+    "    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita_roberta     "
    ]
   },
   {
@@ -980,8 +997,8 @@
     "!python3 /content/CharBERT/run_ner.py \\\n",
     "                    --data_dir /content/drive/MyDrive/NLP/data/CoNLL2003 \\\n",
     "                    --model_type roberta \\\n",
-    "                    --model_name_or_path /content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita \\\n",
-    "                    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003 \\\n",
+    "                    --model_name_or_path /content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita_roberta \\\n",
+    "                    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003_rob \\\n",
     "                    --num_train_epochs 3 \\\n",
     "                    --learning_rate 3e-5 \\\n",
     "                    --char_vocab /content/CharBERT/data/dict/roberta_char_vocab \\\n",
@@ -1008,8 +1025,8 @@
     "!python /content/CharBERT/run_ner.py \\\n",
     "                    --data_dir /content/drive/MyDrive/NLP/data/CoNLL2003_ita \\\n",
     "                    --model_type roberta \\\n",
-    "                    --model_name_or_path /content/drive/MyDrive/NLP/output/multilingual//MLM_cased/wikil_eng_wiki_ita \\\n",
-    "                    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003_ita \\\n",
+    "                    --model_name_or_path /content/drive/MyDrive/NLP/output/multilingual/MLM_cased/wikil_eng_wiki_ita_roberta \\\n",
+    "                    --output_dir  /content/drive/MyDrive/NLP/output/multilingual/NER_cased/conll2003_ita_rob \\\n",
     "                    --num_train_epochs 3 \\\n",
     "                    --learning_rate 3e-5 \\\n",
     "                    --char_vocab /content/CharBERT/data/dict/roberta_char_vocab \\\n",
